added 4 images, psuedo code html and .js of steps and added jquery link

--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <!-- jQuery Link -->
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <title>Crystal Collector</title>
+    <!-- CSS (not sure if reset is required -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-
-
-
+    <!-- Title-->
+    <!-- Game Instructions-->
+    <!-- Random Numbers -->
+    <!-- Wins/Losses -->
+    <!-- Crystals -->
+    <!-- Scores -->
+    <!-- Javascript/jQuery -->
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
