--- a/index.html
+++ b/index.html
@@ -9,19 +9,27 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <title>Crystal Collector</title>
-    <!-- CSS (not sure if reset is required -->
+    <!-- Bootsrap-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- CSS -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
     <!-- Title-->
+
     <!-- Game Instructions-->
     <!-- Random Numbers -->
     <!-- Wins/Losses -->
     <!-- Crystals -->
+    <img src="assets/image/emerald-green.jpg" alt="emerald-green">
+    <img src="assets/image/ruby-red.jpg" alt="ruby-red">
+    <img src="assets/image/sapphire-royal-blue.jpg" alt="sapphire-royal-blue">
+    <img src="assets/image/yellow-citrine.jpg" alt="yellow-citrine">
     <!-- Scores -->
-    <!-- Javascript/jQuery -->
+    <!-- Javascript -->
     <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 
