updated background and style.css

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <body>
     <header>
-        <h1>Teenage Mutant Ninja Turtles RPG!</h1>
+        <img src="../unit-4-game/assets/images/Title.png" alt="title">
     </header>
 
     <section id="character_select">
-        <h2>Select Your Pokemon!</h2>
+        <h2>Select Your Turtle!</h2>
         <div id="characters" class="row">
             <!-- initially append character images here -->
         </div>
