Completed hmtl, game.js works, styling left

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <img src="../unit-4-game/assets/images/Title.png" alt="title">
+        <img class="center" src="../unit-4-game/assets/images/Title.png" alt="title">
     </header>
 
     <section id="character_select">
@@ -51,10 +51,10 @@
         <button type="button" id="attack" class="btn">Attack</button>
     </section>
 
-    <section id="enemies_available">
-        <h2>Enemies Available to Attack</h2>
-        <div id="enemies" class="row">
-            <!-- append enemies here once character is selected -->
+    <section id="opponents_available">
+        <h2>Opponents Available to Attack</h2>
+        <div id="opponents" class="row">
+            <!-- append opponents here once character is selected -->
         </div>
     </section>
 
