added more styling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <div id="fight_row">
         <section id="your_character">
-            <h2>Your Character</h2>
+            <h2><b>Your Character</b></h2>
             <div id="you" class="row">
                 <!-- append your character here once he is selected -->
             </div>
@@ -36,10 +36,11 @@
 
         <section id="message">
             <p></p>
+            <h4></h4>
         </section>
 
         <section id="defender_section">
-            <h2>Defender</h2>
+            <h2><b>Defender</b></h2>
             <div id="defender" class="row">
                 <!-- append defender here once defender is selected -->
             </div>
