--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <title>Teenage Mutant Ninja Turtles!</title>
+    <!-- SOUND SOURCE LINK-HOWLER -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/1.1.29/howler.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -20,7 +22,7 @@
     </header>
 
     <section id="character_select">
-        <h2>Select Your Turtle!</h2>
+        <h2>Select Your Turtle</h2>
         <div id="characters" class="row">
             <!-- initially append character images here -->
         </div>
